--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "main": "app.js",
   "dependencies": {
-    "pi-pins": "~1.0.2"
+    "pi-pins": "~1.0.2",
+    "rpio": "^0.9.19"
   },
   "devDependencies": {},
   "scripts": {
