--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.1",
   "main": "app.js",
   "dependencies": {
-    "chroma-js": "^1.3.4",
-    "pi-pins": "~1.0.2",
-    "rpio": "^0.9.19"
+    "chroma-js": "^1.3.4"
   },
   "devDependencies": {},
   "scripts": {
